fix .center alignment at > 1500px

--- a/webapp/css/style.css
+++ b/webapp/css/style.css
@@ -55,6 +55,15 @@ achievement and certificates <ul> element. */
     }
 }
 
+@media (min-width: 1500px) {
+    .center {
+        float: none;
+        margin-left: auto;
+        margin-right: auto;
+        width: 40%;
+    }
+}
+
 /* vertical-centered text */
 /* Add a media query so that we increase the padding on larger screens. This
 is just part of moving the text down a little of a dadrker part of the image. */
